--- a/service.html
+++ b/service.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-print service-icon"></i>Percetakkan</h4>
-                            <p class="m-0">Kami menghadirkan layanan cetak berkualitas tinggi dengan detail presisi dan
+                            <p class="m-0" style="color: black;">Kami menghadirkan layanan cetak berkualitas tinggi dengan detail presisi dan
                                 hasil akhir premium — mendukung segala kebutuhan branding dan promosi Anda.
 
                             </p>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-camera service-icon"></i>Fotografi</h4>
-                            <p class="m-0">Layanan fotografi profesional yang mengedepankan komposisi, pencahayaan, dan
+                            <p class="m-0"style="color: black;">Layanan fotografi profesional yang mengedepankan komposisi, pencahayaan, dan
                                 karakter visual — ideal untuk produk, personal, dan konten digital.</p>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-desktop service-icon"></i>Edit Video</h4>
-                            <p class="m-0">Editing video dengan alur dinamis, visual yang menarik, dan storytelling yang
+                            <p class="m-0"style="color: black;">Editing video dengan alur dinamis, visual yang menarik, dan storytelling yang
                                 kuat — untuk hasil akhir yang profesional dan berkesan.</p>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-pen-nib service-icon"></i>Design</h4>
-                            <p class="m-0">Kami menciptakan desain yang kuat secara visual dan strategis, mencerminkan
+                            <p class="m-0"style="color: black;">Kami menciptakan desain yang kuat secara visual dan strategis, mencerminkan
                                 identitas brand secara efektif dan estetik.
 
                             </p>
