--- a/testimonial.html
+++ b/testimonial.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img class="img-fluid" src="img/k.jfif" alt="">
+                        <img class="img-fluid" src="img/o.jfif" alt="">
                         <div class="ml-3">
                             <h4>Andini Kartika</h4>
                             <i>Content Creator</i>
