--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-print service-icon"></i>Percetakkan</h4>
-                            <p class="m-0">Kami menghadirkan layanan cetak berkualitas tinggi dengan detail presisi dan
+                            <p class="m-0" style="color: black;">Kami menghadirkan layanan cetak berkualitas tinggi dengan detail presisi dan
                                 hasil akhir premium — mendukung segala kebutuhan branding dan promosi Anda.
 
                             </p>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-camera service-icon"></i>Fotografi</h4>
-                            <p class="m-0">Layanan fotografi profesional yang mengedepankan komposisi, pencahayaan, dan
+                            <p class="m-0"style="color: black;">Layanan fotografi profesional yang mengedepankan komposisi, pencahayaan, dan
                                 karakter visual — ideal untuk produk, personal, dan konten digital.</p>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-desktop service-icon"></i>Edit Video</h4>
-                            <p class="m-0">Editing video dengan alur dinamis, visual yang menarik, dan storytelling yang
+                            <p class="m-0"style="color: black;">Editing video dengan alur dinamis, visual yang menarik, dan storytelling yang
                                 kuat — untuk hasil akhir yang profesional dan berkesan.</p>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-pen-nib service-icon"></i>Design</h4>
-                            <p class="m-0">Kami menciptakan desain yang kuat secara visual dan strategis, mencerminkan
+                            <p class="m-0"style="color: black;">Kami menciptakan desain yang kuat secara visual dan strategis, mencerminkan
                                 identitas brand secara efektif dan estetik.
 
                             </p>
@@ -361,7 +361,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <select class="custom-select bg-transparent border-primary px-4"
+                                    <select class="custom-select  border-primary px-4"
                                         style="height: 49px;">
                                         <option selected>Person</option>
                                         <option value="1">Person 1</option>
@@ -418,7 +418,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="d-flex align-items-center mb-3">
-                        <img class="img-fluid" src="img/k.jfif" alt="">
+                        <img class="img-fluid" src="img/o.jfif" alt="">
                         <div class="ml-3">
                             <h4>Andini Kartika</h4>
                             <i>Content Creator</i>
