--- a/reservation.html
+++ b/reservation.html
@@ -119,15 +119,16 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <select class="custom-select bg-transparent border-primary px-4"
-                                        style="height: 49px;">
-                                        <option selected>Person</option>
-                                        <option value="1">Person 1</option>
-                                        <option value="2">Person 2</option>
-                                        <option value="3">Person 3</option>
-                                        <option value="3">Person 4</option>
-                                    </select>
-                                </div>
+                                    <div class="form-group">
+                                        <select class="custom-select  border-primary px-4"
+                                            style="height: 49px;">
+                                            <option selected>Person</option>
+                                            <option value="1">Person 1</option>
+                                            <option value="2">Person 2</option>
+                                            <option value="3">Person 3</option>
+                                            <option value="3">Person 4</option>
+                                        </select>
+                                    </div>
 
                                 <div>
                                     <button class="btn btn-primary btn-block font-weight-bold py-3" type="submit">Pesan
